--- a/Prototype1/platformio.ini
+++ b/Prototype1/platformio.ini
@@ -14,6 +14,8 @@ board = arduino_nano_esp32
 framework = arduino
 
 lib_deps =
-  adafruit/RTClib@^2.1.1
-  arduino-libraries/Stepper@^1.1.3
+	adafruit/RTClib@^2.1.1
+	AccelStepper
+
+
 
